more work on the protocol