@@ -1,24 +1,37 @@
 package eu.su.mas.dedaleEtu.mas.knowledge;
 
+import java.util.ArrayDeque;
+import java.util.Deque;
+
 class Memory {
-  // TODO: une deque
-  private List<Integer> hashList;
+    private final Deque<Integer> hashDeque;
+    private final int maxSize;
 
-  public Memory() {
-    this.hashList = new ArrayList<>();
-  }
+    public Memory(int maxSize) {
+        this.maxSize = maxSize;
+        this.hashDeque = new ArrayDeque<>(maxSize);
+    }
 
-  public Integer addHash(SerializableKnowledge knowledge) {
-    Integer hash = knowledge.hashCode()
-    hashList.add(hash);
-    return hash;
-  }
+    public Integer addHash(SerializableKnowledge knowledge) {
+        Integer hash = knowledge.hashCode();
+        
+        // If we've reached capacity, remove the oldest element
+        if (hashDeque.size() >= maxSize) {
+            hashDeque.removeFirst();
+        }
+        
+        hashDeque.addLast(hash);
+        return hash;
+    }
 
-  public Integer getLatestHash() {
-    return hashList.get(hashList.size()-1);
-  }
+    public Integer getLatestHash() {
+        if (hashDeque.isEmpty()) {
+            return null;
+        }
+        return hashDeque.getLast();
+    }
 
-  public boolean hasHash(int hash) {
-    return this.hashList.contains(hash);
-  }
+    public boolean hasHash(int hash) {
+        return this.hashDeque.contains(hash);
+    }
 }
